Fix property value UI alignment issue
(cherry picked from commit 29f6819487c398f4a95c1b43121598ede9f80e0f)

--- a/features/common.workflow-approvals.v1/components/approval-task.scss
+++ b/features/common.workflow-approvals.v1/components/approval-task.scss
@@ -35,6 +35,10 @@
             width: 70% !important;
             word-break: break-word;
             overflow-wrap: anywhere;
+
+            .text-value {
+                margin: 0.5em 0;
+            }
         }
     }
 }
